--- a/src/App.css
+++ b/src/App.css
@@ -88,8 +88,9 @@
     scale: 0.68;
 }
 .horarios-list {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr); /* Exibe 4 botões por linha */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   gap: 10px;
   margin-top: 10px;
 }
