--- a/src/App.css
+++ b/src/App.css
@@ -91,7 +91,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  row-gap: 18px;
+  row-gap: 20px;
   margin-top: 10px;
 }
 
@@ -111,12 +111,15 @@
 /* Alterando a cor do dia selecionado diretamente no CSS */
 .react-calendar__tile--active {
   background-color: #830101 !important;
+  border-radius: 5px !important;
   color: white !important; /* Cor do texto branca */
 }
 
 
 .react-calendar__tile--now{
-  background-color: #c5c5c5 !important;
+  background-color: #ffd208 !important;
+  color: rgb(255, 255, 255) !important ;
+  border-radius: 5px !important;
 }
 
 .meusagendamentos{
