--- a/src/App.css
+++ b/src/App.css
@@ -116,16 +116,16 @@
 }
 
 
-.react-calendar__tile--now{
-  background-color: #ffd208 !important;
-  color: rgb(255, 255, 255) !important ;
-  border-radius: 5px !important;
-}
-
 .meusagendamentos{
     font-weight: bold;
     color: rgb(255 255 255);
     background: #830101;
     padding: 5px 10px;
     border-radius: 5px;
+}
+
+.react-calendar__navigation__label__labelText.react-calendar__navigation__label__labelText--from{
+color: #830101;
+font-weight: bold;
+font-size: 16px;
 }
